--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,11 +7,13 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -27,8 +29,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.videotest.VideoViewActivity"
-            android:label="@string/title_activity_display_message"
+            android:name="com.videotest.PlayVidActivity"
+            android:label="@string/title_activity_play_vid"
             android:parentActivityName="com.videotest.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
